fixing mongo prefixed schema names, time values